--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
-  <div>
-    <h1>this is a test</h1>
-  </div>
+  <head>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <pre>thisisatest:123</pre>
+  </body>
 </html>
