--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <pre>thisisatest:123</pre>
+    <pre>194.15.36.219:9176</pre>
   </body>
 </html>
