--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
   <head>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="resource://content-accessible/plaintext.css">
   </head>
   <body>
     <pre>194.15.36.219
-    9176</pre>
+9176</pre>
   </body>
 </html>
